--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   border-right: 1px solid gray;
   border-left: 1px solid gray;
-  background: rgb(0, 78, 0);
+  background-color: rgb(0, 96, 0);
   color: white;
 }
 
@@ -30,4 +30,21 @@
   padding: 0.5rem 0 0.5rem 0;
   border-bottom: 1px solid gray;
   font-style: italic;
+}
+
+.generic-button {
+  background-color: rgb(46, 127, 46);
+  border: 1px solid black;
+  color: black;
+  margin: 5px;
+  padding: 10px;
+  cursor: pointer;
+  font-style: italic;
+  transition: background-color 0.5s;
+  transition: color 0.5s;
+}
+
+.generic-button:hover {
+  background-color: rgb(0, 96, 0);
+  color: white;
 }
