--- a/frontend/src/Navigation/MainHeader.css
+++ b/frontend/src/Navigation/MainHeader.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: rgb(1, 50, 1);
+  background-color: rgb(46, 127, 46);
   box-shadow: 0 2px 6px black;
   padding: 0 1rem;
   z-index: 5;
