--- a/frontend/src/Navigation/Navlinks.css
+++ b/frontend/src/Navigation/Navlinks.css
@@ -16,7 +16,7 @@
 
 .nav-links a {
   text-decoration: none;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 1rem;
   transition: background-color 1s ease-out;
 }
@@ -24,7 +24,7 @@
 
 .nav-links a:hover,
 .nav-links a.active {
-  background-color: rgb(95, 150, 95);
+  background-color: rgb(0, 96, 0);
   border-color: #292929;
-  color: #292929;
+  color: #ffffff;
 }
