--- a/frontend/src/components/StationList.css
+++ b/frontend/src/components/StationList.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   border-right: 1px solid gray;
   border-left: 1px solid gray;
-  background: rgb(0, 78, 0);
+  background-color: rgb(0, 96, 0);
   color: white;
 }
 
