--- a/frontend/src/Navigation/Navlinks.css
+++ b/frontend/src/Navigation/Navlinks.css
@@ -1,4 +1,4 @@
-.nav-links {
+.nav-links-container {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -6,15 +6,20 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content:space-around;
   align-items: center;
 }
 
-.nav-links li {
-  margin: 1rem;
+.nav-links__links {
+  display: flex;
+  flex-direction: row;
 }
 
-.nav-links a {
+.nav-links__links li {
+  margin: 5px;
+}
+
+.nav-links__links a {
   text-decoration: none;
   color: rgb(0, 0, 0);
   padding: 1rem;
@@ -22,8 +27,8 @@
 }
 
 
-.nav-links a:hover,
-.nav-links a.active {
+.nav-links__links a:hover,
+.nav-links__links a.active {
   background-color: rgb(0, 96, 0);
   border-color: #292929;
   color: #ffffff;
