--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,10 +9,11 @@
 }
 
 .header-line span {
+  width: 100%;
   border-top: 1px solid gray;
   border-bottom: 1px solid gray;
-  width: 100%;
   padding: 0.5rem 0 0.5rem 0;
+  font-size: smaller;
 }
 
 .item-line {
@@ -30,6 +31,7 @@
   padding: 0.5rem 0 0.5rem 0;
   border-bottom: 1px solid gray;
   font-style: italic;
+  font-size: small;
 }
 
 .generic-button {
