--- a/frontend/src/components/Journey/JourneyItem.css
+++ b/frontend/src/components/Journey/JourneyItem.css
@@ -1,3 +1,21 @@
+.journey-item-line {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-right: 1px solid gray;
+  border-left: 1px solid gray;
+  text-decoration: none;
+  color: black;
+}
+
+.journey-item-line span {
+  width: 100%;
+  padding: 0.5rem 0 0.5rem 0;
+  border-bottom: 1px solid gray;
+  font-style: italic;
+  font-size: small;
+}
+
 .journey-span {
-  background-color: rgb(199, 199, 199);
+  background: rgb(200, 200, 200);
 }
