--- a/frontend/src/components/Journey/JourneyList.css
+++ b/frontend/src/components/Journey/JourneyList.css
@@ -1,3 +1,9 @@
+.journeylist-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .journeys-header-line {
   display: flex;
   flex-direction: row;
@@ -24,6 +30,12 @@
   margin-top: 2px;
   margin-left: 2px;
   cursor: pointer;
+}
+
+.pagination {
+  align-self: center;
+  justify-self: center;
+  margin-top: 1rem;
 }
 
 
