--- a/frontend/src/components/Station/StationList.css
+++ b/frontend/src/components/Station/StationList.css
@@ -1,3 +1,9 @@
+.stationlist-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .stations-header-line {
   display: flex;
   flex-direction: row;
@@ -9,10 +15,15 @@
 }
 
 .stations-header-line span {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
   border-top: 1px solid gray;
   border-bottom: 1px solid gray;
-  width: 100%;
   padding: 0.5rem 0 0.5rem 0;
+  font-size: smaller;
 }
 
 .stations-item-line {
@@ -36,4 +47,16 @@
   border-bottom: 1px solid gray;
   font-style: italic;
   font-size: small;
+}
+
+.sort-icon {
+  margin-top: 2px;
+  margin-left: 2px;
+  cursor: pointer;
+}
+
+.pagination {
+  align-self: center;
+  justify-self: center;
+  margin-top: 1rem;
 }
