--- a/frontend/src/components/Station/SingleStation.css
+++ b/frontend/src/components/Station/SingleStation.css
@@ -23,15 +23,31 @@
 .journeys-total {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-content: center;
   margin: 1rem 0 1rem 0;
 }
 
-.station-details p,
+.journeys-total-item {
+  display: flex;
+  flex-direction: row;
+}
+
+.station-details,
 .journeys-total p {
-    margin: 0;
+    margin: 2px;
     padding: 0;
     font-style: italic;
 }
+
+.started-journeys {
+  margin-bottom: 1rem;
+}
+
+.loading {
+  font-weight: bolder;
+}
+
 
 .stationImg {
   width: 50%;
