--- a/frontend/src/components/Station/StationList.css
+++ b/frontend/src/components/Station/StationList.css
@@ -66,7 +66,7 @@
 .search-form {
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   padding: 0.5rem;
 }
 
