--- a/frontend/src/components/Journey/JourneyList.css
+++ b/frontend/src/components/Journey/JourneyList.css
@@ -70,6 +70,7 @@
   display: none;
   position: absolute;
   top: 9rem;
+  right: 5rem;
   min-width: 10rem;
   text-align: start;
   font-size: small;
