--- a/frontend/src/Navigation/Navlinks.css
+++ b/frontend/src/Navigation/Navlinks.css
@@ -1,35 +1,58 @@
-.nav-links-container {
+.nav-links {
   list-style: none;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content:space-around;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.nav-links__links {
-  display: flex;
-  flex-direction: row;
+.nav-links li {
+  width: 100%;
+  height: 3rem;
+  border: 1px solid #292929;
 }
 
-.nav-links__links li {
-  margin: 5px;
-}
-
-.nav-links__links a {
+.nav-links a {
+  border: 1px solid transparent;
+  color: #292929;
   text-decoration: none;
-  color: rgb(0, 0, 0);
-  padding: 1rem;
-  transition: background-color 1s ease-out;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  padding-left: 0.5rem;
 }
 
+.nav-links a.active {
+  background: rgb(105, 158, 105);
+}
 
-.nav-links__links a:hover,
-.nav-links__links a.active {
-  background-color: rgb(0, 96, 0);
-  border-color: #292929;
-  color: #ffffff;
+@media (min-width: 768px) {
+  .nav-links {
+    flex-direction: row;
+  }
+
+  .nav-links li {
+    margin: 0 0.5rem;
+    border: none;
+  }
+
+  .nav-links a {
+    color: black;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .nav-links a:hover,
+  .nav-links a:active,
+  .nav-links a.active {
+    background: rgb(105, 158, 105);
+    border: 1px solid #292929;
+  }
 }
