--- a/frontend/src/components/Journey/JourneyItem.css
+++ b/frontend/src/components/Journey/JourneyItem.css
@@ -19,3 +19,9 @@
 .journey-span {
   background: rgb(200, 200, 200);
 }
+
+@media (max-width: 767px) {
+  .journey-item-line span {
+    font-size: 6px;
+  }
+}
