--- a/frontend/src/components/Journey/AddJourney.css
+++ b/frontend/src/components/Journey/AddJourney.css
@@ -18,8 +18,7 @@
 }
 
 .depature h2,
-.return h2
-{
+.return h2 {
   grid-column: 1 / 3;
   font-style: italic;
   text-align: start;
@@ -41,4 +40,15 @@
 .add-journey__buttons {
   border-top: 1px solid rgb(173, 173, 173);
   padding-top: 1rem;
+}
+
+@media (max-width: 767px) {
+  .add-journey__container {
+    width: 100%;
+  }
+
+  .depature h2,
+  .return h2 {
+    font-size: 20px;
+  }
 }
