--- a/frontend/src/components/Station/SingleStation.css
+++ b/frontend/src/components/Station/SingleStation.css
@@ -35,9 +35,9 @@
 
 .station-details,
 .journeys-total p {
-    margin: 2px;
-    padding: 0;
-    font-style: italic;
+  margin: 2px;
+  padding: 0;
+  font-style: italic;
 }
 
 .started-journeys {
@@ -47,7 +47,6 @@
 .loading {
   font-weight: bolder;
 }
-
 
 .stationImg {
   width: 50%;
@@ -59,4 +58,25 @@
 .map-container {
   height: 15rem;
   width: 100%;
+}
+
+@media (max-width: 767px) {
+  .station-card-container {
+    width: 100%;
+  }
+
+  .station-details h1 {
+    font-size: 2rem;
+    margin: 0;
+    padding: 0;
+  }
+
+  .station-details,
+  .journeys-total p {
+    font-size: 10px;
+  }
+
+  .btn-custom-width {
+    width: 70%;
+  }
 }
