--- a/frontend/src/shared/layout/Modal.css
+++ b/frontend/src/shared/layout/Modal.css
@@ -1,7 +1,7 @@
 .modal {
   z-index: 100;
   position: fixed;
-  top: 28vh;
+  top: 20vh;
   left: 10%;
   width: 80%;
   background:  white;
@@ -14,6 +14,10 @@
   padding: 1rem 0.5rem;
   background: rgb(46, 127, 46);
   color: white;
+}
+
+.modal-header h2 {
+  font-size: 20px;
 }
 
 .modal-header h2 {
